2007-04-27  Albert Chu <chu11@llnl.gov>

	* libfreeipm/, common/src, ipmi-sel/, ipmi-sensors: Rename
	"logical_fru" to "fru" for consistency with the ipmi spec.

	* ipmi-sel/src/ipmi-sel-wrappers.c (_get_sel_system_event_record):
	Output sensor names when they are available.

	* ipmi-sensors/ipmi-sensors.8.pre.in: Update -s option info.
	
2007-04-26  Albert Chu <chu11@llnl.gov>

        * ipmimonitoring/ipmimonitoring.8.in, ipmidetect/ipmidetectd.8.in,
	ipmiconsole/ipmiconsole.8.in: Fix manpage output bug.

	* ipmimonitoring/ipmimonitoring.8.in: Reword some text.

	* ipmipower/ipmipower8.in, ipmiconsole/ipmiconsole.8.in,
	ipmimonitoring/libipmimonitoring.3.in: Update some text.

	* ac_ipmi_monitoring_sensor_config_file.m4: Fix filename typo.

	* doc/freeipmi-faq.texi: Fix some wording.

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
	(_cmdline_parse, main): Don't clear all args, just the username
	and password.

	* ipmimonitoring/: Add hostrange support to ipmimonitoring.  Add
	-r option.  Add -c option and alternate cache dir support.

	* Fix various warnings.

2007-04-25  Albert Chu <chu11@llnl.gov>

	* configure.ac: Add pre-req header checks for linux/ipmi.h.

	* ipmipower/src/ipmipower.h, ipmipower/src/ipmipower_config.c,
	ipmipower/src/ipmipower.c: Change '_set' parameters to
	'_set_on_cmdline'.

	* ipmiconsole/src/ipmiconsole/ipmiconsole_config.h,
	ipmiconsole/src/ipmiconsole/ipmiconsole_config.c: Change '_set'
	parameters to '_set_on_cmdline'.
	
2007-04-24  Albert Chu <chu11@llnl.gov>

	* common/src/pstdout.c (_pstdout_print, _pstdout_print_wrapper,
	_pstdout_output_finish): Add race protections w/
	no_more_external_output flag.

	* common/src/pstdout.c (_pstdout_print_wrapper, pstdout_printf,
	pstdout_fprintf, pstdout_perror, _pstdout_output_finish): Adjust
	calls appropriately.

	* common/src/pstdout.c (_pstdout_state_init): Init mutex.
	
	* common/src/pstdout.c (_pstdout_sigint_finish_output): Output